More verbose slides in the notebook

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -96,6 +96,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "We can call the function, and it behaves as if there were no decorator, waiting for a second each time:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -124,16 +135,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "But if we call it again with an argument that was already calculated, it completes in no time at all:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
     "triple(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "This is because the actual function wasn't called.  Instead, pymemo retrieved the stored result from earlier."
    ]
   },
   {
