--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -170,11 +170,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "These results were stored in the `persist/triple` directory, as we can see if we examine the files there:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "files = listdir('persist/triple')\n",
+    "files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "open('persist/triple/' + files[0]).read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Each file contains one result, in a pickled and compressed format.  The filename is a hash of the arguments.  We can customise this to make it more human-readable, as we will see later."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We can also manipulate the cache manually, interacting with it like a dictionary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -241,11 +302,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "We can make the contents of these files human-readable by specifying custom `pickle` and `unpickle` functions.  In this example, we write the output of the `double` function to a string using `repr`, and we read it back in using `eval` (make sure the directory is secure if you try this at home!)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -328,11 +400,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Now the files still have complicated names:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "files = listdir('persist/double')\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "But their contents are human-readable!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for file in files:\n",
+    "    print(open('persist/double/' + file).read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Instead of using `persist/`, we can choose a different directory for storage by specifying `cache`.  We can also pick a different directory for our specific function using `funcname`.\n",
+    "\n",
+    "In this example, Bob wants to save results in a directory he is sharing with Alice.  He is concerned that there may be another function called `foo`, so he specifies a more specific name for the function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -343,6 +478,17 @@
     "    return x + y + z + a\n",
     "\n",
     "foo.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Note that it doesn't matter whether we specify arguments with keywords, nor what order we use:"
    ]
   },
   {
@@ -386,6 +532,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "If an argument is equal to its default value, it will be treated as if it were not specified at all:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -404,7 +561,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -439,12 +596,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Behind the scenes, a key is created from a list of arguments using a pymemo function called `arg_tuple`:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -456,11 +624,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Note that arguments are sorted alphabetically, and that `f=6` is removed since it is equal to the default value.  This ensures that equivalent sets of arguments are treated as equal.  This behaviour can be customised by specifying a `key` function, as we will see in the next example."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Here we have a function `sum` that takes a variable number of arguments and adds them all up.  We can memoise it as usual:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -472,7 +662,19 @@
     "    for x in args:\n",
     "        acc += x\n",
     "    return acc\n",
+    "\n",
     "sum.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Any mathematician knows that this function will return the same answer regardless of which order a set of arguments are specified in.  However, pymemo doesn't know this, and so it produces a different key for each ordering of arguments, and recomputes each time:"
    ]
   },
   {
@@ -502,11 +704,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We can improve on this by specifying a `key` function.  In this case we use a function that returns a sorted list of all the arguments:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -518,7 +731,19 @@
     "    for x in args:\n",
     "        acc += x\n",
     "    return acc\n",
+    "\n",
     "sum.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Now when we try two different orderings, they hash to the same file, and the answer from the first one can be reused:"
    ]
   },
   {
@@ -549,11 +774,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "In the next example, we memoise a function `pow` that returns the exponent of one integer by another, in a human-readable way:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -567,6 +803,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "The key, which has the form `(('x', 2), ('y', 3))`, is hashed to the string `2 to the 3`, which will be used in the filename.  The integer result is converted to a string using `str`, and converted back using `int`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -577,6 +824,17 @@
    "outputs": [],
    "source": [
     "pow(2,3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Let us run a few examples, and examine the output:"
    ]
   },
   {
@@ -624,11 +882,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "These results can now be inspected by anyone, without them even needing to know about pymemo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "So far we have just hashed a key to retrieve its result.  The chance of a hash collision is tiny (by default we use SHA-256) but for absolute correctness we may choose to store a key along with its result:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -636,6 +916,7 @@
     "@persist(storekey=True)\n",
     "def square(x):\n",
     "    return x*x\n",
+    "\n",
     "square.clear()"
    ]
   },
@@ -667,16 +948,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
    "source": [
-    "len(square.cache)"
+    "Not only does this ensure correctness, but it allows us to iterate through the keys in the cache:"
    ]
   },
   {
@@ -737,19 +1016,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
    "source": [
-    "@persist(hash=lambda k: 'hello world')\n",
-    "def square(x):\n",
-    "    return x*x\n",
-    "square.clear()"
+    "Let us create a deliberate hash collision and see how pymemo handles it.\n",
+    "\n",
+    "Michael uses pymemo to memoise his `square` function, but foolishly uses a hash function that maps every key to the same string!"
    ]
   },
   {
@@ -757,7 +1033,35 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@persist(hash=lambda k: 'hello world')\n",
+    "def square(x):\n",
+    "    return x*x\n",
+    "\n",
+    "square.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "The first call to `square` works just fine:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -766,11 +1070,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "But then the same result is retrieved whatever input we give:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -779,11 +1094,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "This is because every set of arguments points to `hello world.out`:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -792,11 +1118,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "What if we choose to store keys?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -805,7 +1142,19 @@
     "         storekey=True)\n",
     "def square(x):\n",
     "    return x*x\n",
+    "\n",
     "square.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "The first call to `square` writes a file to disk:"
    ]
   },
   {
@@ -813,7 +1162,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -822,21 +1171,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "If we call `square` again with a different argument, pymemo checks the key and raises a HashCollisionError:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "from commoncache import HashCollisionError\n",
     "try:\n",
     "    square(4)\n",
-    "except HashCollisionError as hce:\n",
+    "except Exception as hce:\n",
     "    print(\"Hash collision for keys\", hce.args[0], 'and', hce.args[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Another way of preventing hash collisions is to use an injective `hash` function (i.e. one that never maps two different keys to the same string).  If our `hash` function is injective, and we specify its inverse, `unhash`, then we can iterate through its keys just as if `storekey` was set to `True`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "In the following example, we memoise the exponential function.  As a key, we take the float of the input (so that `2.0` is the same as `2`), and we simply hash it to a string of the form `\"e to the 2.0\"`.  Since this hash function is injective, we can specify an `unhash` function that simply strips the initial `\"e to the \"` from the beginning, and calls `float` on the remainder.  This gives us back the original number."
    ]
   },
   {
@@ -845,7 +1226,7 @@
    "metadata": {
     "scrolled": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -855,7 +1236,19 @@
     "         unhash=lambda s: float(s[9:]))\n",
     "def exp(x):\n",
     "    return 2.71828 ** x\n",
+    "\n",
     "exp.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The function works as expected:"
    ]
   },
   {
@@ -863,7 +1256,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -875,11 +1268,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "And we can iterate over its keys, just as if we had used `storekey=True`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -911,8 +1316,21 @@
     }
    },
    "source": [
-    "## Interacting with a server\n",
-    "Warning: just a prototype"
+    "## Using a server\n",
+    "All our examples so far have simply written all results to disk.  But what if we want to connect to a server online?\n",
+    "\n",
+    "The `mongodb/` directory in pymemo allows us to setup a MongoDB server with a REST interface, which pymemo users can interact with to store results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Execute the following block, or navigate to `mongodb_server` and execute `run.py`, to start a server that can be used to store results:"
    ]
   },
   {
@@ -921,12 +1339,11 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "# Run this block somewhere else, or navigate to mongodb_server and execute run.py\n",
     "#from eve import Eve\n",
     "#import os\n",
     "#fname = os.path.join(os.getcwd(), 'mongodb_server', 'settings.py')\n",
@@ -935,11 +1352,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "If such a server is running, we can connect to it by specifying a `cache` string that starts with `mongodb://`, as follows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -949,6 +1377,17 @@
     "    return string[0] + string[-1]\n",
     "\n",
     "start_and_end.clear()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "It can be used in exactly the same way as a file cache:"
    ]
   },
   {
@@ -1021,11 +1460,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We can also use all the options that have been described so far:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "outputs": [],
@@ -1156,13 +1606,6 @@
     "for key,val in exp.cache.items():\n",
     "    print('e to the', key, 'equals', val)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
