notebook: chapter titles

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -23,6 +23,8 @@
     }
    },
    "source": [
+    "## 1 - Persist\n",
+    "\n",
     "The main feature of pymemo is the `persist` decorator:"
    ]
   },
@@ -309,6 +311,8 @@
     }
    },
    "source": [
+    "## 2 - Custom pickling\n",
+    "\n",
     "We can make the contents of these files human-readable by specifying custom `pickle` and `unpickle` functions.  In this example, we write the output of the `double` function to a string using `repr`, and we read it back in using `eval` (make sure the directory is secure if you try this at home!)."
    ]
   },
@@ -457,6 +461,8 @@
     }
    },
    "source": [
+    "## 3 - Storage location\n",
+    "\n",
     "Instead of using `persist/`, we can choose a different directory for storage by specifying `cache`.  We can also pick a different directory for our specific function using `funcname`.\n",
     "\n",
     "In this example, Bob wants to save results in a directory he is sharing with Alice.  He is concerned that there may be another function called `foo`, so he specifies a more specific name for the function:"
@@ -642,6 +648,8 @@
     }
    },
    "source": [
+    "## 4 - Custom key function\n",
+    "\n",
     "Here we have a function `sum` that takes a variable number of arguments and adds them all up.  We can memoise it as usual:"
    ]
   },
@@ -781,6 +789,8 @@
     }
    },
    "source": [
+    "## 5 - Custom hash function\n",
+    "\n",
     "In the next example, we memoise a function `pow` that returns the exponent of one integer by another, in a human-readable way:"
    ]
   },
@@ -900,6 +910,8 @@
     }
    },
    "source": [
+    "## 6 - Storing keys\n",
+    "\n",
     "So far we have just hashed a key to retrieve its result.  The chance of a hash collision is tiny (by default we use SHA-256) but for absolute correctness we may choose to store a key along with its result:"
    ]
   },
@@ -1206,6 +1218,8 @@
     }
    },
    "source": [
+    "## 7 - Unhashing\n",
+    "\n",
     "Another way of preventing hash collisions is to use an injective `hash` function (i.e. one that never maps two different keys to the same string).  If our `hash` function is injective, and we specify its inverse, `unhash`, then we can iterate through its keys just as if `storekey` was set to `True`."
    ]
   },
@@ -1316,7 +1330,7 @@
     }
    },
    "source": [
-    "## Using a server\n",
+    "## 8 - Using a server\n",
     "All our examples so far have simply written all results to disk.  But what if we want to connect to a server online?\n",
     "\n",
     "The `mongodb/` directory in pymemo allows us to setup a MongoDB server with a REST interface, which pymemo users can interact with to store results."
