Notebook: optimise for presentations

--- a/Persistent memoisation.ipynb
+++ b/Persistent memoisation.ipynb
@@ -114,7 +114,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -443,6 +443,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -463,8 +464,17 @@
    "source": [
     "## 3 - Storage location\n",
     "\n",
-    "Instead of using `persist/`, we can choose a different directory for storage by specifying `cache`.  We can also pick a different directory for our specific function using `funcname`.\n",
-    "\n",
+    "Instead of using `persist/`, we can choose a different directory for storage by specifying `cache`.  We can also pick a different directory for our specific function using `funcname`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "In this example, Bob wants to save results in a directory he is sharing with Alice.  He is concerned that there may be another function called `foo`, so he specifies a more specific name for the function:"
    ]
   },
@@ -494,7 +504,18 @@
     }
    },
    "source": [
-    "Note that it doesn't matter whether we specify arguments with keywords, nor what order we use:"
+    "Note that the `cache` string starts with `file://` to indicate that we want to store the results as local files and not to a remote server."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "It doesn't matter whether we specify arguments with keywords, nor what order we use:"
    ]
   },
   {
@@ -502,7 +523,7 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -554,7 +575,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -682,7 +703,7 @@
     }
    },
    "source": [
-    "Any mathematician knows that this function will return the same answer regardless of which order a set of arguments are specified in.  However, pymemo doesn't know this, and so it produces a different key for each ordering of arguments, and recomputes each time:"
+    "Any mathematician knows that this function will return the same answer regardless of which order a set of arguments is specified in.  However, pymemo doesn't know this, and so it produces a different key for each ordering of arguments, and recomputes each time:"
    ]
   },
   {
@@ -976,7 +997,7 @@
    "metadata": {
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -1035,8 +1056,17 @@
     }
    },
    "source": [
-    "Let us create a deliberate hash collision and see how pymemo handles it.\n",
-    "\n",
+    "Let us create a deliberate hash collision and see how pymemo handles it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "Michael uses pymemo to memoise his `square` function, but foolishly uses a hash function that maps every key to the same string!"
    ]
   },
@@ -1109,7 +1139,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1545,7 +1575,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
