demo: import arg_tuple properly

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -644,7 +644,7 @@
    },
    "outputs": [],
    "source": [
-    "from preprocessing import arg_tuple\n",
+    "from pymemo.preprocessing import arg_tuple\n",
     "def baz(a, b, c=3, d=4, *, e, f=6, g=7):\n",
     "    return a+b+c+d+e+f+g\n",
     "arg_tuple(baz, 10, 2, 3, e=50, g=3, f=6)"
