Rename to pypersist

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -8,11 +8,11 @@
     }
    },
    "source": [
-    "# pymemo\n",
+    "# pypersist\n",
     "### Persistent memoisation framework for Python\n",
-    "This notebook shows some of the features available in pymemo.\n",
+    "This notebook shows some of the features available in pypersist.\n",
     "\n",
-    "Find more information at https://github.com/mtorpey/pymemo"
+    "Find more information at https://github.com/mtorpey/pypersist"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "source": [
     "## 1 - Persist\n",
     "\n",
-    "The main feature of pymemo is the `persist` decorator:"
+    "The main feature of pypersist is the `persist` decorator:"
    ]
   },
   {
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "from pymemo import persist"
+    "from pypersist import persist"
    ]
   },
   {
@@ -168,7 +168,7 @@
     }
    },
    "source": [
-    "This is because the actual function wasn't called.  Instead, pymemo retrieved the stored result from earlier."
+    "This is because the actual function wasn't called.  Instead, pypersist retrieved the stored result from earlier."
    ]
   },
   {
@@ -630,7 +630,7 @@
     }
    },
    "source": [
-    "Behind the scenes, a key is created from a list of arguments using a pymemo function called `arg_tuple`:"
+    "Behind the scenes, a key is created from a list of arguments using a pypersist function called `arg_tuple`:"
    ]
   },
   {
@@ -644,7 +644,7 @@
    },
    "outputs": [],
    "source": [
-    "from pymemo.preprocessing import arg_tuple\n",
+    "from pypersist.preprocessing import arg_tuple\n",
     "def baz(a, b, c=3, d=4, *, e, f=6, g=7):\n",
     "    return a+b+c+d+e+f+g\n",
     "arg_tuple(baz, 10, 2, 3, e=50, g=3, f=6)"
@@ -703,7 +703,7 @@
     }
    },
    "source": [
-    "Any mathematician knows that this function will return the same answer regardless of which order a set of arguments is specified in.  However, pymemo doesn't know this, and so it produces a different key for each ordering of arguments, and recomputes each time:"
+    "Any mathematician knows that this function will return the same answer regardless of which order a set of arguments is specified in.  However, pypersist doesn't know this, and so it produces a different key for each ordering of arguments, and recomputes each time:"
    ]
   },
   {
@@ -920,7 +920,7 @@
     }
    },
    "source": [
-    "These results can now be inspected by anyone, without them even needing to know about pymemo."
+    "These results can now be inspected by anyone, without them even needing to know about pypersist."
    ]
   },
   {
@@ -1056,7 +1056,7 @@
     }
    },
    "source": [
-    "Let us create a deliberate hash collision and see how pymemo handles it."
+    "Let us create a deliberate hash collision and see how pypersist handles it."
    ]
   },
   {
@@ -1067,7 +1067,7 @@
     }
    },
    "source": [
-    "Michael uses pymemo to memoise his `square` function, but foolishly uses a hash function that maps every key to the same string!"
+    "Michael uses pypersist to memoise his `square` function, but foolishly uses a hash function that maps every key to the same string!"
    ]
   },
   {
@@ -1220,7 +1220,7 @@
     }
    },
    "source": [
-    "If we call `square` again with a different argument, pymemo checks the key and raises a HashCollisionError:"
+    "If we call `square` again with a different argument, pypersist checks the key and raises a HashCollisionError:"
    ]
   },
   {
@@ -1363,7 +1363,7 @@
     "## 8 - Using a server\n",
     "All our examples so far have simply written all results to disk.  But what if we want to connect to a server online?\n",
     "\n",
-    "The `mongodb/` directory in pymemo allows us to setup a MongoDB server with a REST interface, which pymemo users can interact with to store results."
+    "The `mongodb/` directory in pypersist allows us to setup a MongoDB server with a REST interface, which pypersist users can interact with to store results."
    ]
   },
   {
