--- a/binder/demo.ipynb
+++ b/binder/demo.ipynb
@@ -1416,7 +1416,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist(cache=\"mongodb://localhost:5000/memos/\")\n",
+    "@persist(cache=\"mongodb://localhost:5000/persist/\")\n",
     "def start_and_end(string):\n",
     "    return string[0] + string[-1]\n",
     "\n",
@@ -1524,7 +1524,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist(cache=\"mongodb://localhost:5000/memos/\", storekey=True)\n",
+    "@persist(cache=\"mongodb://localhost:5000/persist/\", storekey=True)\n",
     "def alternating(string):\n",
     "    return string[::2]\n",
     "\n",
@@ -1597,7 +1597,7 @@
    },
    "outputs": [],
    "source": [
-    "@persist(cache=\"mongodb://localhost:5000/memos/\",\n",
+    "@persist(cache=\"mongodb://localhost:5000/persist/\",\n",
     "         key=float,\n",
     "         hash=lambda k: f'e to the {k}',\n",
     "         unhash=lambda s: float(s[len('e to the '):]))\n",
