Presentation I gave in Erlangen

--- a/binder/demo.ipynb
+++ b/binder/demo.ipynb
@@ -8,18 +8,20 @@
     }
    },
    "source": [
-    "# pypersist\n",
-    "### Persistent memoisation framework for Python\n",
-    "This notebook shows some of the features available in pypersist.\n",
+    "# Memoisation and *pypersist*\n",
     "\n",
-    "Find more information at https://github.com/mtorpey/pypersist"
+    "### Michael Torpey\n",
+    "University of St Andrews\n",
+    "\n",
+    "2019-05-15\n",
+    "\n",
+    "Learn more at https://pypersist.readthedocs.io"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -400,19 +402,6 @@
    },
    "outputs": [],
    "source": [
-    "foo(1,4,3,a=7)  # Last arg is kw-only, and used"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
     "foo(1,4,a=3,z=3)  # Default arg in non-canonical order"
    ]
   },
@@ -427,6 +416,20 @@
    "outputs": [],
    "source": [
     "foo(1,4,a=7,z=3)  # Non-default arg in non-canonical order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pypersist.preprocessing import arg_tuple\n",
+    "arg_tuple(foo._func, 1, 4, a=7, z=3)"
    ]
   },
   {
@@ -473,7 +476,7 @@
    },
    "outputs": [],
    "source": [
-    "sum(4,12,7,3,3,1)  # recomputed since the args are in different order"
+    "sum(4,12,7,3,3,1)"
    ]
   },
   {
