--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 This file describes changes to pypersist since the initial release.
 
+1.0 (2020-01-23)
+  - Update support for latest Sage
+  - Major version number indicating a mature project
+
 0.8 (2019-04-11)
   - Fix a problem with dependencies
 
